--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Ripcualer | Tech in the Shadows</title>
+    <title>Ripcualer | not much tho</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -122,7 +122,7 @@
                     Hello, I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-purple-500">Ripcualer</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-300 max-w-2xl mx-auto mb-8 fade-in-up" style="animation-delay: 0.4s;">
-                    A technology explorer in the shadows. I turn curiosity into code and hardware into new experiences.
+                    Just fucking bored.
                 </p>
                 <div class="flex justify-center gap-4 flex-wrap fade-in-up" style="animation-delay: 0.6s;">
                     <a href="#skills" class="cta-button bg-indigo-600 text-white font-bold py-3 px-8 rounded-full">My Skills</a>
@@ -135,7 +135,7 @@
                 <div class="glass-card max-w-4xl mx-auto p-8 md:p-12 fade-in-up">
                     <h2 class="text-3xl font-bold text-white mb-6">About Me</h2>
                     <div class="text-gray-300 space-y-4 text-lg">
-                        <p>I'm a cybersecurity student, passionate about software and even more so about hardware. I love exploring the guts of technology, from low-level programming to electronics.</p>
+                        <p>I'm a cybersecurity student </p>
                         
                 </div>
             </section>
@@ -210,5 +210,6 @@
 
 </body>
 </html>
+
 
 
