--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             <!-- Contact -->
             <section id="contact" class="py-24 px-6 text-center">
                  <div class="glass-card max-w-3xl mx-auto p-8 md:p-12 fade-in-up">
-                    <h2 class="text-3xl font-bold text-white mb-4">Let's Connect?</h2>
-                    <p class="text-gray-300 mb-8 max-w-xl mx-auto">If you have an idea, a project in mind, or just want to chat about tech, don't hesitate to reach out.</p>
+                    <h2 class="text-3xl font-bold text-white mb-4">if you wanna talk?</h2>
+                    <p class="text-gray-300 mb-8 max-w-xl mx-auto">If you want to connect this is my mail no bullshit aight.</p>
                     
                     <a href="mailto:ripcualer@gmail.com" class="inline-block cta-button bg-indigo-600 text-white font-bold py-3 px-8 rounded-full text-lg mb-8">
                         ripcualer@gmail.com
@@ -203,13 +203,14 @@
 
         <!-- Footer -->
         <footer class="text-center text-gray-500 py-8 px-6">
-            <p>Designed and coded in the shadows by Ripcualer &copy; 2025</p>
+            <p>Designed by me code by ChatGpt &copy; 2025</p>
         </footer>
 
     </div>
 
 </body>
 </html>
+
 
 
 
