--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Ripcualer | not much tho</title>
+    <title>Ripcualer | </title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -122,7 +122,7 @@
                     Hello, I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-purple-500">Ripcualer</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-300 max-w-2xl mx-auto mb-8 fade-in-up" style="animation-delay: 0.4s;">
-                    Just fucking bored.
+                    Creative always
                 </p>
                 <div class="flex justify-center gap-4 flex-wrap fade-in-up" style="animation-delay: 0.6s;">
                     <a href="#skills" class="cta-button bg-indigo-600 text-white font-bold py-3 px-8 rounded-full">My Skills</a>
@@ -155,12 +155,6 @@
                         <div class="skill-icon mx-auto"><i class="fas fa-code"></i></div>
                         <h3 class="text-xl font-bold mb-3 text-white">Programming</h3>
                         <p class="text-gray-400">Python, HTML</p>
-                    </div>
-
-                    <div class="glass-card p-8 text-center fade-in-up" style="animation-delay: 0.4s;">
-                        <div class="skill-icon mx-auto"><i class="fas fa-gamepad"></i></div>
-                        <h3 class="text-xl font-bold mb-3 text-white">Game Dev</h3>
-                        <p class="text-gray-400">Unity, Modding, Game Design</p>
                     </div>
 
                     <div class="glass-card p-8 text-center fade-in-up" style="animation-delay: 0.5s;">
@@ -203,13 +197,14 @@
 
         <!-- Footer -->
         <footer class="text-center text-gray-500 py-8 px-6">
-            <p>Designed by me code by ChatGpt &copy; 2025</p>
+            <p>Designed by me, code by ai &copy; 2026</p>
         </footer>
 
     </div>
 
 </body>
 </html>
+
 
 
 
