--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <h2 class="text-3xl font-bold text-white mb-4">if you wanna talk?</h2>
                     <p class="text-gray-300 mb-8 max-w-xl mx-auto">If you want to connect this is my mail no bullshit aight.</p>
                     
-                    <a href="mailto:ripcualer@gmail.com" class="inline-block cta-button bg-indigo-600 text-white font-bold py-3 px-8 rounded-full text-lg mb-8">
-                        ripcualer@gmail.com
+                    <a href="mailto:ripcualer@outlook.com" class="inline-block cta-button bg-indigo-600 text-white font-bold py-3 px-8 rounded-full text-lg mb-8">
+                        ripcualer@outlook.com
                     </a>
 
                     <p class="text-gray-400 mb-4">You can also find me here:</p>
@@ -201,6 +201,7 @@
 
 </body>
 </html>
+
 
 
 
