--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo para ti ❤️</title>
+    <title>Luisa ❤️</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -108,7 +108,7 @@
     <div id="paso-contador">
         <div id="reloj-visible">
             <h1>¡Beso enviado! ✈️</h1>
-            <p>Falta esto para nuestra sorpresa:</p>
+            <p>Falta esto para la sorpresa:</p>
             <div class="reloj">
                 <div class="segmento"><span class="num" id="d">00</span>Días</div>
                 <div class="segmento"><span class="num" id="h">00</span>Horas</div>
@@ -173,3 +173,4 @@
     </script>
 </body>
 </html>
+
