--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         function validarPass() {
             const pass = document.getElementById('input-pass').value.trim().toLowerCase();
-            if (pass === "t'estimo") {
+            if (pass === "T'estimo") {
                 document.getElementById('paso-password').style.display = 'none';
                 document.getElementById('paso-pregunta').style.display = 'block';
             } else {
@@ -173,4 +173,5 @@
     </script>
 </body>
 </html>
+
 
