--- a/index.html
+++ b/index.html
@@ -316,6 +316,10 @@
             <button id="btn-si" class="btn-interactivo" onclick="iniciarJuego()">¡SÍ! ❤️</button>
             <button id="btn-no" class="btn-interactivo" onclick="moverNo()">No 😜</button>
         </div>
+        <button onclick="irAContador()"
+            style="margin-top: 50px; background: transparent; border: 1px solid var(--color-principal); color: var(--color-principal); padding: 8px 20px; border-radius: 20px; cursor: pointer; font-size: 0.9rem;">
+            Ir al final (Saltar juego) ⏩
+        </button>
     </div>
 
     <div id="paso-juego">
