Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -368,13 +368,34 @@
                 <div class="segmento"><span class="num" id="m">00</span><span class="label">Minutos</span></div>
                 <div class="segmento"><span class="num" id="s">00</span><span class="label">Segundos</span></div>
             </div>
-        </div>
-        <div id="mensaje-revelado">
-            <h1>✨ MENSAJE SECRETO ✨</h1>
-            <p id="texto-final" style="font-size: 1.8rem; font-weight: bold; color: var(--color-principal);">[Aquí irá
-                tu mensaje especial el día 20]</p>
-        </div>
+       <div id="mensaje-revelado">
+    <h1>✨ Poema Pt.4 ✨</h1>
+    
+    <div id="texto-final" style="font-size: 1.5rem; font-weight: bold; color: var(--color-principal); line-height: 1.6;">
+        
+        <p style="margin-bottom: 1.5rem;">
+            Y otra vez vivimos en esta vida sin sentido,<br>
+            En el que no soy capaz de negarme a entregarte mis latidos,<br>
+            Si crees que pudiésemos cambiar el destino<br>
+            Entonces déjame plantearte una vida conmigo.
+        </p>
+
+        <p style="margin-bottom: 1.5rem;">
+            Todos estos sentidos que se me arriman al oído<br>
+            Te dejan en las manos mi corazón rendido.<br>
+            Pero tu presencia sin compromiso no cae en el olvido<br>
+            Tampoco como los besos que tenemos sin suspiros.
+        </p>
+
+        <p>
+            Me mostraste la desnudez de tu cuerpo y alma<br>
+            Pero nada nunca se iguala a ti, mi bella dama<br>
+            Y por escribir este poema pase la noche en vela<br>
+            Ya que poner cura a la añoranza me reclama.
+        </p>
+
     </div>
+</div>
 
     <script>
         const frasesValidas = ["t'estimo", "te quiero mucho", "tqm", "te estimo"];
@@ -571,5 +592,6 @@
         }
     </script>
 </body>
+
 
 </html>
