--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
             display: none;
             padding: 20px;
             animation: fadeIn 2s;
+            overflow-y: auto;
+            max-height: 90vh;
         }
 
         @keyframes fadeIn {
@@ -327,8 +329,7 @@
         <p>Dime qué piensas de esta imagen:</p>
 
         <div class="foto-container" id="marco-fotos">
-            <!-- Las fotos se inyectarán aquí -->
-        </div>
+            </div>
 
         <div class="contador-fotos" id="contador-fotos">Foto 1 de X</div>
 
@@ -368,34 +369,32 @@
                 <div class="segmento"><span class="num" id="m">00</span><span class="label">Minutos</span></div>
                 <div class="segmento"><span class="num" id="s">00</span><span class="label">Segundos</span></div>
             </div>
-       <div id="mensaje-revelado">
-    <h1>✨ Poema Pt.4 ✨</h1>
-    
-    <div id="texto-final" style="font-size: 1.5rem; font-weight: bold; color: var(--color-principal); line-height: 1.6;">
-        
-        <p style="margin-bottom: 1.5rem;">
-            Y otra vez vivimos en esta vida sin sentido,<br>
-            En el que no soy capaz de negarme a entregarte mis latidos,<br>
-            Si crees que pudiésemos cambiar el destino<br>
-            Entonces déjame plantearte una vida conmigo.
-        </p>
+        </div>
 
-        <p style="margin-bottom: 1.5rem;">
-            Todos estos sentidos que se me arriman al oído<br>
-            Te dejan en las manos mi corazón rendido.<br>
-            Pero tu presencia sin compromiso no cae en el olvido<br>
-            Tampoco como los besos que tenemos sin suspiros.
-        </p>
-
-        <p>
-            Me mostraste la desnudez de tu cuerpo y alma<br>
-            Pero nada nunca se iguala a ti, mi bella dama<br>
-            Y por escribir este poema pase la noche en vela<br>
-            Ya que poner cura a la añoranza me reclama.
-        </p>
-
+        <div id="mensaje-revelado">
+            <h1>✨ Poema Pt.4 ✨</h1>
+            <div id="texto-final" style="font-size: 1.3rem; font-weight: bold; color: var(--color-principal); line-height: 1.4;">
+                <p>
+                    Y otra vez vivimos en esta vida sin sentido,<br>
+                    En el que no soy capaz de negarme a entregarte mis latidos,<br>
+                    Si crees que pudiésemos cambiar el destino<br>
+                    Entonces déjame plantearte una vida conmigo.
+                </p>
+                <p>
+                    Todos estos sentidos que se me arriman al oído<br>
+                    Te dejan en las manos mi corazón rendido.<br>
+                    Pero tu presencia sin compromiso no cae en el olvido<br>
+                    Tampoco como los besos que tenemos sin suspiros.
+                </p>
+                <p>
+                    Me mostraste la desnudez de tu cuerpo y alma<br>
+                    Pero nada nunca se iguala a ti, mi bella dama<br>
+                    Y por escribir este poema pase la noche en vela<br>
+                    Ya que poner cura a la añoranza me reclama.
+                </p>
+            </div>
+        </div>
     </div>
-</div>
 
     <script>
         const frasesValidas = ["t'estimo", "te quiero mucho", "tqm", "te estimo"];
@@ -542,21 +541,17 @@
 
         function finalizarJuego() {
             document.getElementById('paso-juego').style.display = 'none';
-            // Mostrar estado de carga si quieres, o ir directo
             enviarDatos();
         }
 
         function enviarDatos() {
-            // URL de tu Google Apps Script (REEMPLAZA ESTO CON LA TUYA)
             const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwjWC4fZEIku8JsZALE0zGzEG25qvoozCt3FWW4Hzqp9CJqkZfwueyrauur2f4Z07KE/exec';
 
             if (!SCRIPT_URL || SCRIPT_URL.includes('TU_URL')) {
-                console.warn("No se ha configurado la URL del script. Simulando envío.");
                 irAContador();
                 return;
             }
 
-            // Primero obtenemos la IP
             fetch('https://api.ipify.org?format=json')
                 .then(response => response.json())
                 .then(data => {
@@ -564,7 +559,6 @@
                     enviarAlBackend(SCRIPT_URL, ip);
                 })
                 .catch(error => {
-                    console.error('Error obteniendo IP:', error);
                     enviarAlBackend(SCRIPT_URL, "No detectada");
                 });
         }
@@ -581,18 +575,9 @@
                     ip: ip
                 })
             })
-                .then(response => {
-                    console.log("Datos enviados");
-                    irAContador();
-                })
-                .catch(error => {
-                    console.error('Error enviando datos:', error);
-                    irAContador();
-                });
+            .then(() => irAContador())
+            .catch(() => irAContador());
         }
     </script>
 </body>
-
-
 </html>
-
