--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             document.getElementById('btn-no').style.display = 'none';
             document.getElementById('paso-contador').style.display = 'block';
 
-            const meta = new Date('February 19, 2026 23:36:00').getTime();
+            const meta = new Date('February 20, 2026 13:45:00').getTime();
             const x = setInterval(() => {
                 const ahora = new Date().getTime();
                 const diff = meta - ahora;
@@ -516,7 +516,7 @@
             const palabra = input.value.trim();
 
             if (!palabra) {
-                alert("¡Escribe una palabra al menos! 😉");
+                alert("¡Escribe una palabra al menos! ");
                 return;
             }
 
@@ -581,4 +581,5 @@
     </script>
 </body>
 </html>
+
 
